--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,17 @@
     <title>Homework 10</title>
   </head>
   <body>
-    <input type="text" id="search-box" />
-    <ul class="country-list"></ul>
-    <div class="country-info"></div>
+    <div class="container">
+      <div class="search-wrapper">
+        <input
+          type="text"
+          id="search-box"
+          placeholder="Enter a country name here..."
+        />
+      </div>
+      <ul class="country-list"></ul>
+      <div class="country-info"></div>
+    </div>
 
     <script src="index.js" type="module"></script>
   </body>
